--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     </div>
     <div class="step">
       Known Bugs: After creating a text, you can drag it, and the coordinates will be updated in the table. However, if you've created several texts and you want to drag one that isn't the last, its coordinates won't update in the correct place. Instead, they will update in the last row of the table.
+      Only capable of moving the text using either the mouse or the X-Y inputs individually.
     </div>
   </div>
 </div>
